syntax = "proto3";
package rumgap.v1;

message MetaReply {
    repeated string items = 1;
}

message MetaHostnamesRequest {
    MetaHostnamesOption option = 1;
}

message MetaGenresRequest {
    MetaGenresOption option = 1;
}

message StatsReply {
    int64 count_total_reading = 1;
    int64 count_total_chapters = 2;
    int64 count_reading = 3;
    int64 count_chapters = 4;
}

enum MetaHostnamesOption {
    HostnamesReading = 0;
    HostnamesManga = 1;
    HostnamesOnline = 2;
}

enum MetaGenresOption {
    GenresReading = 0;
    GenresManga = 1;
}

