syntax = "proto3";
package rumgap.v1;

message PaginateQuery {
    uint64 per_page = 1;
    uint64 page = 2;
}

message PaginateSearchQuery {
    uint64 per_page = 1;
    uint64 page = 2;
    string search = 3;
    string order = 4;
}

message PaginateReply {
    uint64 total = 1;
    uint64 page = 2;
    uint64 per_page = 3;
    uint64 max_page = 4;
}
